<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:fitsSystemWindows="true"
    tools:context=".DetailMovieActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_movie_photo"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/movie_img_detail"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster_aquaman" />

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/poster_aquaman"
                    app:layout_collapseMode="parallax" />

            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:background="@android:color/white"
                    app:cardBackgroundColor="@color/deep_purple_500"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_large"
                            android:paddingRight="@dimen/spacing_large">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/movie_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/movie_name"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                    android:textColor="#000" />

                                <TextView
                                    android:layout_below="@id/movie_name"
                                    android:id="@+id/movie_from"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/movie_from"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                    android:textColor="#fff" />

                            </RelativeLayout>

                            <ImageButton
                                android:layout_marginLeft="300dp"
                                android:id="@+id/btn_favorite"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:contentDescription="@string/icon_favorit"
                                android:tint="#fff"
                                app:srcCompat="@drawable/ic_favorite_border" />

                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_middle"
                            android:background="@color/grey_10" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="#000"
                            app:fontFamily="sans-serif-medium" />


                        <TextView
                            android:id="@+id/movie_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:lineSpacingExtra="@dimen/spacing_small"
                            android:text="@string/content_aquaman"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#FFF" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@color/deep_purple_500"
                    app:contentPadding="5dp"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:background="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/original_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"/>

                        <TextView
                            android:id="@+id/runtime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:text="@string/runtime"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_below="@id/original_language"
                            />

                        <TextView
                            android:id="@+id/budget"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:text="@string/budget"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_below="@+id/runtime"/>

                        <TextView
                            android:id="@+id/revenue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:text="@string/revenue"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_below="@+id/budget"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginLeft="200dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/movie_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Language"
                            android:textColor="#FFF"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"/>

                        <TextView
                            android:id="@+id/movie_runtime"
                            android:layout_width="match_parent"
                            android:textColor="#fff"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            tools:text="000 mins"
                            android:layout_below="@+id/movie_language" />

                        <TextView
                            android:id="@+id/movie_budget"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#fff"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            tools:text="$00000"
                            android:layout_below="@+id/movie_runtime"/>

                        <TextView
                            android:id="@+id/movie_revenue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#fff"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            tools:text="$00000"
                            android:layout_below="@id/movie_budget"/>

                    </RelativeLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_large" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>